[gd_scene load_steps=5 format=3 uid="uid://ci1cg3yhs7e3d"]

[ext_resource type="Script" uid="uid://bqc0ogge0sdnp" path="res://Dev/UI/PlayerListDisplay.gd" id="1_wqgab"]
[ext_resource type="Texture2D" uid="uid://chcfiuyiwvpt1" path="res://icon.svg" id="2_q751w"]
[ext_resource type="Texture2D" uid="uid://cnsncbplkuu2" path="res://Art/Sprites/SPR_ColorIcon_01.png" id="3_j1m14"]
[ext_resource type="Texture2D" uid="uid://bct77dun4d3nf" path="res://Art/Sprites/SPR_Crown_01.png" id="4_5dj4j"]

[node name="PlayerListDisplay" type="Panel"]
custom_minimum_size = Vector2(0, 48)
script = ExtResource("1_wqgab")

[node name="Avatar" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -24.0
offset_right = 48.0
offset_bottom = 24.0
grow_vertical = 2
texture = ExtResource("2_q751w")
expand_mode = 3

[node name="Name" type="Label" parent="."]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 56.0
offset_top = -12.0
offset_right = 497.0
offset_bottom = 11.0
grow_vertical = 2
text = "awdoiawhdoiawhdoiahwdoiawhdoi"
text_overrun_behavior = 3

[node name="ColorDisplay" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 538.255
offset_right = 586.255
offset_bottom = 48.0
texture = ExtResource("3_j1m14")
metadata/_edit_use_anchors_ = true

[node name="HostCrown" type="TextureRect" parent="."]
layout_mode = 1
offset_left = 500.0
offset_top = 6.0
offset_right = 536.0
offset_bottom = 42.0
texture = ExtResource("4_5dj4j")
expand_mode = 2
stretch_mode = 4
